--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy DCF App to GitHub Pages
+nname: Deploy DCF App to GitHub Pages
 
 on:
   push:
@@ -22,8 +22,8 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-        node-version: 18
-        cache: 'none'
+          node-version: 18
+          cache: 'none'
 
       - name: Install dependencies
         run: npm install
@@ -39,3 +39,4 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+
