--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-VITE_FIREBASE_API_KEY=your_api_key
-VITE_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=your_project_id
-VITE_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=sender_id
-VITE_FIREBASE_APP_ID=app_id
+VITE_FIREBASE_API_KEY=AIzaSyClJFB3fJTJTMnFdpRJAfW5Mxt2P7vG_zw
+VITE_FIREBASE_AUTH_DOMAIN=ai-dcf-valuation.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=ai-dcf-valuation
+VITE_FIREBASE_STORAGE_BUCKET=ai-dcf-valuation.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=873575315716
+VITE_FIREBASE_APP_ID=1:873575315716:web:d04ba6a3d8aadf5df8b85
 GITHUB_PAGES_BRANCH=gh-pages
 
