--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,4 +56,8 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
 
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+
 
